--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Content/AdminLTE/starter.html
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Content/AdminLTE/starter.html
@@ -261,7 +261,7 @@ desired effect
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-        <li class="treeview">
+        <li class="treeview menu-open">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
