--- a/Lights.QuickMVC/Lights.QuickMVC.Web/TestDemo.html
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/TestDemo.html
@@ -6,10 +6,12 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-    <form action="http://192.168.0.108:8006/Interface/Niujin" method="post"> 
-        <input type="text" name="username" value="18201233210" />
+    <form action="http://183.47.42.221:8023/MobileInterface/XZJTY" method="post"> 
+        <label for="uname" >UserName</label>
+        <input type="text" id="uname" name="username" value="18201233210" />
         <br />
-        <input type="text" name="token" value="123456789" />
+        <label for="token">Token</label>
+        <input type="text" id="token" name="token" value="123456789" />
         <br />
         <input type="submit" value="提交" />
     </form>
